@@ -1,0 +1,28 @@
+#
+# This file is autogenerated by pip-compile
+# To update, run:
+#
+#    pip-compile -o requirements-dev.txt requirements-dev.in requirements.in
+#
+-e file:///home/antoine/Code/citest
+astroid==2.2.5            # via pylint
+atomicwrites==1.3.0       # via pytest
+attrs==19.1.0             # via pytest
+entrypoints==0.3          # via flake8
+flake8==3.7.7
+isort==4.3.17
+lazy-object-proxy==1.3.1  # via astroid
+mccabe==0.6.1             # via flake8, pylint
+mock==2.0.0
+more-itertools==7.0.0     # via pytest
+pbr==5.1.3
+pluggy==0.9.0             # via pytest
+py==1.8.0                 # via pytest
+pycodestyle==2.5.0        # via flake8
+pyflakes==2.1.1           # via flake8
+pylint==2.3.1
+pytest==4.4.0
+six==1.12.0               # via astroid, mock, pytest
+typed-ast==1.3.1          # via astroid
+wheel==0.33.1
+wrapt==1.11.1             # via astroid
