@@ -1,2 +1,10 @@
 [tox]
-envlist = py36,py37
+envlist = py36
+
+[testenv]
+commands =
+  pytest {posargs: tests}
+  # isort --check-only --diff --recursive
+  # flake8
+deps =
+  -r requirements-dev.txt
