@@ -3,5 +3,12 @@ CHANGES
 
 * WIP
 * WIP
+* Revert "Revert "WIP"" Removes requirements.txt again
+* Revert "WIP" adds requirements.txt back
+* WIP
+* WIP
+* WIP
+* WIP
+* WIP
 * WIP
 * Initial commit
